basic css flexbox display with buttons

--- a/style.css
+++ b/style.css
@@ -1,141 +1,47 @@
 *,
-*::before,
-*::after {
-  box-sizing: border-box;
-  background-color:rgb(27, 63, 63);
-  text-align: center;
+*::before, *::after  {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-html,
-body,
-.wrapper {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+body  {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: olivedrab;
+
 }
-
-body {
-  font-family: sans-serif;
-  background-color:aliceblue;
+.container  {
+    width: 800px;
+    max-width: 80%;
+    background-color: aliceblue;
+    border-radius: .25rem;
+    padding: 10px;
+    box-shadow: 0 0 10px 2px;
 }
-
-.wrapper {
-  padding-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
+.btn-grid  {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 1rem;
+    margin: 20px 0;
 }
-
-header {
-  text-align: center;
-  padding: 20px;
-  padding-top: 0px;
-  color:white;
+.btn  {
+    background-color:silver;
+    padding: 5px 10px;
 }
-
-.card {
-  background-color:antiquewhite;
-  border-radius: 5px;
-  border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: white;
-  font-size: 18px;
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 30px 40px;
+.btn:hover  {
+    border-color: black;
 }
-
-.card-header::after {
-  content: " ";
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
+.start-btn, .next-btn  {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
 }
-
-.card-body {
-  min-height: 100px;
-}
-
-.card-footer {
-  text-align: center;
-}
-
-.card-footer::before {
-  content: " ";
-  display: block;
-  width: 100%;
-  background: white;
-  height: 2px;
-}
-
-.card-footer::after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-
-.btn {
-  border: none;
-  background-color: hsl(360, 91%, 36%);
-  border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
-  color: hsl(0, 0%, 100%);
-  display: inline-block;
-  font-size: 22px;
-  line-height: 22px;
-  margin: 16px 16px 16px 20px;
-  padding: 14px 34px;
-  text-align: center;
-  cursor: pointer;
-}
-
-button[disabled] {
-  cursor: default;
-  background: #c0c7cf;
-}
-
-.float-right {
-  float: right;
-}
-
-#password {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  display: block;
-  width: 100%;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 85px;
-  font-size: 3.5rem;
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 2px dashed black;
-  border-radius: 6px;
-  resize: none;
-  overflow: hidden;
-  color: white;
-  
-}
-
-@media (max-width: 690px) {
-  .btn {
-    font-size: 1rem;
-    margin: 16px 0px 0px 0px;
-    padding: 10px 15px;
-  }
-
-  #password {
-    font-size: 6rem;
-  }
-}
-
-@media (max-width: 500px) {
-  .btn {
-    font-size: 0.8rem;
-  }
+.controls  {
+    display: flex;
+    justify-content: space-between;
 }
